# NutriLive

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schemas.py
app/contracts/: __init__.py  meal_log.py  nutrition.py
app/services/: live_bridge.py  meal_store.py  milestone.py  nutrition.py  session_store.py  upstream.py
app/web/: app.css  app.js  index.html
frontend/: .npmrc  firebase-config.example.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  firebase.ts  types.ts
tests/: conftest.py  test_contracts.py  test_health.py  test_live_bridge.py  test_live_ws.py  test_meals.py  test_nutrition.py  test_session_store.py  test_upstream.py
